stop logo jumping around when window is resized

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -303,6 +303,11 @@ body {
 }
 
 @media screen and (min-width: 800px) and (max-width: 1200px) {
+  .navbar-brand .navbar-item {
+    align-items: center;
+    display: flex;
+  }
+
   .navbar {
     align-items: center;
   }
